Fixed ripple effect from expanding the screen and overflowing into other elements

--- a/src/sass/sections/_hero.scss
+++ b/src/sass/sections/_hero.scss
@@ -16,6 +16,20 @@
   z-index: -1;
 
 
+  .jumbotron {
+    position: relative;
+    overflow: hidden;
+  }
+
+  .ripple-background {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+  }
+  
   .circle{
     position: absolute;
     border-radius: 50%;
