--- a/src/sass/sections/_skills.scss
+++ b/src/sass/sections/_skills.scss
@@ -35,7 +35,6 @@ padding-bottom: 10%;
 }
 .skills .skill {
     transition: all 0.2s ease-in-out;
-    cursor: pointer;
     line-height: 2em;
     width:90px;
     padding-right: 3%;
