--- a/src/styles.css
+++ b/src/styles.css
@@ -12271,6 +12271,18 @@ section {
   right: 0;
   z-index: -1;
 }
+#hero .jumbotron {
+  position: relative;
+  overflow: hidden;
+}
+#hero .ripple-background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
 #hero .circle {
   position: absolute;
   border-radius: 50%;
@@ -12517,7 +12529,6 @@ section {
 }
 #skills .skills .skill {
   transition: all 0.2s ease-in-out;
-  cursor: pointer;
   line-height: 2em;
   width: 90px;
   padding-right: 3%;
